[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/main/ui/chat/ChatFrame.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/main/ui/chat/chat-ui.gd" type="Script" id=16]

[node name="ChatUi" type="Control"]
anchor_top = -0.00333338
anchor_right = 1.0
anchor_bottom = 0.996667
script = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChatFrame" parent="." instance=ExtResource( 1 )]
[connection signal="pop_out_completed" from="ChatFrame" to="." method="_on_ChatFrame_pop_out_completed"]
